docs-archive/apache-airflow-providers-trino/2.0.1/_sources/_api/airflow/providers/trino/hooks/trino/index.rst.txt
:mod:`airflow.providers.trino.hooks.trino`
==========================================

.. py:module:: airflow.providers.trino.hooks.trino


Module Contents
---------------

.. py:exception:: TrinoException

   Bases: :class:`Exception`

   Trino exception


.. py:class:: TrinoHook

   Bases: :class:`airflow.hooks.dbapi.DbApiHook`

   Interact with Trino through trino package.

   >>> ph = TrinoHook()
   >>> sql = "SELECT count(1) AS num FROM airflow.static_babynames"
   >>> ph.get_records(sql)
   [[340698]]

   .. attribute:: conn_name_attr
      :annotation: = trino_conn_id

      

   .. attribute:: default_conn_name
      :annotation: = trino_default

      

   .. attribute:: conn_type
      :annotation: = trino

      

   .. attribute:: hook_name
      :annotation: = Trino

      

   
   .. method:: get_conn(self)

      Returns a connection object



   
   .. method:: get_isolation_level(self)

      Returns an isolation level



   
   .. method:: get_records(self, hql, parameters: Optional[dict] = None)

      Get a set of records from Trino



   
   .. method:: get_first(self, hql: str, parameters: Optional[dict] = None)

      Returns only the first row, regardless of how many rows the query returns.



   
   .. method:: get_pandas_df(self, hql, parameters=None, **kwargs)

      Get a pandas dataframe from a sql query.



   
   .. method:: run(self, hql, autocommit: bool = False, parameters: Optional[dict] = None)

      Execute the statement against Trino. Can be used to create views.



   
   .. method:: insert_rows(self, table: str, rows: Iterable[tuple], target_fields: Optional[Iterable[str]] = None, commit_every: int = 0, replace: bool = False, **kwargs)

      A generic way to insert a set of tuples into a table.

      :param table: Name of the target table
      :type table: str
      :param rows: The rows to insert into the table
      :type rows: iterable of tuples
      :param target_fields: The names of the columns to fill in the table
      :type target_fields: iterable of strings
      :param commit_every: The maximum number of rows to insert in one
          transaction. Set to 0 to insert all rows in one transaction.
      :type commit_every: int
      :param replace: Whether to replace instead of insert
      :type replace: bool




